# mc

./: .gitignore  configure.ac
doc/: INSTALL  SPELL_PLUGIN_SPEC.md
lib/: Makefile.am  editor-plugin.h  keybind.c  keybind.h  panel-plugin-loader.c  panel-plugin.c  panel-plugin.h
lib/strutil/: strutil.c
lib/vfs/: plugin-loader.c
lib/widget/: dialog-switch.c
misc/: Makefile.am  mc.default.keymap  spell.keymap
src/: keymap.c
src/editor/: Makefile.am  edit-impl.h  edit.c  editcmd.c  editcomplete.c  editmenu.c  editwidget.c  spell.c  spell.h
src/editor-plugins/: builtin-plugins.c  builtin-plugins.h
src/editor-plugins/spell/: spell.c  spell.h
src/filemanager/: cmd.c  filemanager.c  panel.c  panel.h
src/panel-plugins/docker/: docker.c
src/panel-plugins/hello/: hello.c
src/panel-plugins/samba/: samba.c
src/panel-plugins/sftp/: sftp.c
src/panel-plugins/systemd/: systemd.c
tests/lib/vfs/: vfs_adjust_stat.c
tests/src/editor/: Makefile.am  edit_complete_word_cmd.c  edit_plugin_etags.c
